--- a/cmd/golangorg/cloudbuild.yaml
+++ b/cmd/golangorg/cloudbuild.yaml
@@ -22,4 +22,4 @@ steps:
     args: ["go", "run", "./cmd/versionprune", "--dry_run=false", "--project=$PROJECT_ID", "--service=default"]
 
 options:
-  machineType: E2_STANDARD_8
+  machineType: E2_HIGHCPU_8
